# AdkBot

./: .env-example  .gitignore  Dockerfile  GEMINI.md  LICENSE  Makefile  README.md  architecture.mermaid  pyproject.toml  requirements.txt  secure-openclaw-build-plan.md
.github/workflows/: ci.yml  deploy-to-prod.yaml  deploy.yml  pr_checks.yaml  staging.yaml
agent/: __init__.py  agent.py  config.py  errors.py  fast_api_app.py  main.py  memory.py  root_agent.py
agent/app_utils/: telemetry.py  typing.py
agent/security/: __init__.py  approval.py  dlp_filter.py  input_guard.py  output_guard.py  trace.py
agent/subagents/: __init__.py  calendar_agent.py  drive_agent.py  gmail_agent.py  search_agent.py
deployment/terraform/: iam.tf  outputs.tf  service.tf  variables.tf
deployment/terraform/dev/: .terraform.lock.hcl  service.tf  terraform.tfstate  terraform.tfstate.backup  variables.tf
deployment/terraform/dev/vars/: env.tfvars
deployment/terraform/vars/: env.tfvars
terraform/: main.tf
terraform/environments/: dev.tfvars
terraform/modules/cloud_run/: main.tf
terraform/modules/iam/: main.tf
terraform/modules/secrets/: main.tf
terraform/modules/wif/: main.tf
tests/: test_main.py
tests/integration/: test_agent.py  test_server_e2e.py
tests/load_test/: README.md  load_test.py
