[project]
name = "adkbot"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "google-adk>=1.0",
    "google-genai>=0.2.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "python-telegram-bot>=21.0.1",
    "google-cloud-aiplatform>=1.111.0",
    "google-cloud-firestore>=2.15.0",
    "google-cloud-dlp>=3.16.0",
    "google-cloud-secret-manager>=2.18.0",
    "google-cloud-logging>=3.9.0",
    "google-cloud-trace>=1.11.2",
    "pydantic-settings>=2.2.1",
    "google-auth>=2.0.0",
    "opentelemetry-sdk>=1.0.0",
    "opentelemetry-exporter-gcp-trace>=1.0.0",
    "opentelemetry-exporter-gcp-monitoring>=1.0.0a0",
    "opentelemetry-exporter-gcp-logging>=1.0.0a0",
    "opentelemetry-resourcedetector-gcp>=1.0.0a0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.1",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "httpx>=0.27.0",
]
lint = [
    "ruff>=0.3.0",
    "mypy>=1.9.0",
    "codespell>=2.0.0",
]
eval = [
    "google-adk[eval]>=1.0",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "B", "I"] # warnings, errors, bugbear, isort

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
pythonpath = ["."]
testpaths = [
    "tests",
]
